--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,21 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script>
+  $(window).on('load', function() {
+    // code here
+    $.fn.modal.Constructor.prototype.enforceFocus = function() {
+      var modal_this = this
+      $(document).on('focusin.modal', function (e) {
+        if (modal_this.$element[0] !== e.target && !modal_this.$element.has(e.target).length
+          && !$(e.target.parentNode).hasClass('ck-editor__editable')
+          && !$(e.target.parentNode).hasClass('ck-editor__editable')) {
+          modal_this.$element.focus()
+        }
+      })
+    };
+  });
+
+</script>
 </body>
 </html>
